<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".presentation.ui.fragment.HomeFragment">

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/common_title_main_menu"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/btnPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_action_pay"
        android:gravity="center"
        android:minHeight="64dp"
        android:text="@string/common_pay"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка История -->
    <TextView
        android:id="@+id/btnHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_action_pay"
        android:gravity="center"
        android:minHeight="64dp"
        android:text="@string/common_history"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>